# GAMES101

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/assignment0/: README.md  main.cpp
src/assignment1/: CMakeLists.txt  README.md  Triangle.hpp  main.cpp
src/assignment2/: CMakeLists.txt  README.md  main.cpp  rasterizer.cpp
src/assignment3/: CMakeLists.txt  README.md  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp
src/assignment4/: README.md  main.cpp
src/assignment5/: CMakeLists.txt  Light.hpp  Object.hpp  README.md  Renderer.cpp  Scene.hpp  Triangle.hpp  main.cpp
src/assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  README.md  Renderer.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
src/assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Light.hpp  README.md  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
