cmake_minimum_required(VERSION 3.10)

project(GAMES101 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(assignment0)
add_subdirectory(assignment1)
add_subdirectory(assignment2)
add_subdirectory(assignment3)
add_subdirectory(assignment4)
add_subdirectory(assignment5)
add_subdirectory(assignment6)
add_subdirectory(assignment7)
